@@ -10,7 +10,7 @@ namespace Basic {
 // Navigation constants
 //------------------------------------------------------------------------------
 const double Nav::WGS84_A  = 6378137.0;                  // WGS-84 semi major axis (Meters)
-const double Nav::WGS84_B  = 6356752.314;                // WGS-84 semi minor axis (Meters)
+const double Nav::WGS84_B  = 6356752.314245;             // WGS-84 semi minor axis (Meters)
 const double Nav::WGS84_F  = (WGS84_A-WGS84_B)/WGS84_A;  // WGS-84 flattening
 const double Nav::WGS84_E2 = WGS84_F*(2.0 - WGS84_F);    // Eccentricity Squared
 const double Nav::ERADM    = Nav::WGS84_A;               // Equatorial radius (WGS84 major axis) (Meters)
